--- a/UberClone/Views/CreateAccountViewController.xib
+++ b/UberClone/Views/CreateAccountViewController.xib
@@ -1,22 +1,169 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13142" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="16097" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12042"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="CreateAccountViewController" customModuleProvider="target">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="CreateAccountViewController" customModule="UberClone" customModuleProvider="target">
             <connections>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
-            <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+            <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+            <subviews>
+                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="pwZ-o5-CCz">
+                    <rect key="frame" x="16" y="74" width="382" height="62.5"/>
+                    <subviews>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="e-mail" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zfZ-UM-jOJ">
+                            <rect key="frame" x="0.0" y="0.0" width="382" height="20.5"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                            <color key="textColor" systemColor="systemGray2Color" red="0.68235294120000001" green="0.68235294120000001" blue="0.69803921570000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                        <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="digite seu e-mail" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Lgj-CD-LLL">
+                            <rect key="frame" x="0.0" y="28.5" width="382" height="34"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                            <textInputTraits key="textInputTraits" keyboardType="emailAddress"/>
+                        </textField>
+                    </subviews>
+                    <constraints>
+                        <constraint firstItem="Lgj-CD-LLL" firstAttribute="leading" secondItem="pwZ-o5-CCz" secondAttribute="leading" id="76S-bR-Ar1"/>
+                        <constraint firstItem="zfZ-UM-jOJ" firstAttribute="leading" secondItem="pwZ-o5-CCz" secondAttribute="leading" id="LCM-zi-oLG"/>
+                        <constraint firstAttribute="trailing" secondItem="Lgj-CD-LLL" secondAttribute="trailing" id="TSK-1u-S1z"/>
+                        <constraint firstAttribute="trailing" secondItem="zfZ-UM-jOJ" secondAttribute="trailing" id="aR2-P1-4gn"/>
+                    </constraints>
+                </stackView>
+                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="lad-dT-TyL">
+                    <rect key="frame" x="16" y="166.5" width="382" height="62.5"/>
+                    <subviews>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="nome completo" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fNe-D4-L4i">
+                            <rect key="frame" x="0.0" y="0.0" width="382" height="20.5"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                            <color key="textColor" systemColor="systemGray2Color" red="0.68235294120000001" green="0.68235294120000001" blue="0.69803921570000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                        <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="digite seu nome" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="nSk-XG-oaB">
+                            <rect key="frame" x="0.0" y="28.5" width="382" height="34"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                            <textInputTraits key="textInputTraits"/>
+                        </textField>
+                    </subviews>
+                    <constraints>
+                        <constraint firstItem="fNe-D4-L4i" firstAttribute="leading" secondItem="lad-dT-TyL" secondAttribute="leading" id="D3C-WB-vkL"/>
+                        <constraint firstAttribute="trailing" secondItem="fNe-D4-L4i" secondAttribute="trailing" id="KIt-ya-9Ov"/>
+                        <constraint firstAttribute="trailing" secondItem="nSk-XG-oaB" secondAttribute="trailing" id="Zwv-DZ-nam"/>
+                        <constraint firstItem="nSk-XG-oaB" firstAttribute="leading" secondItem="lad-dT-TyL" secondAttribute="leading" id="oeB-jm-vgu"/>
+                    </constraints>
+                </stackView>
+                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="Kf8-kn-R6A">
+                    <rect key="frame" x="16" y="259" width="382" height="62.5"/>
+                    <subviews>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="senha" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Kse-qC-Bhb">
+                            <rect key="frame" x="0.0" y="0.0" width="382" height="20.5"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                            <color key="textColor" systemColor="systemGray2Color" red="0.68235294120000001" green="0.68235294120000001" blue="0.69803921570000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                        <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="digite sua senha" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="uZa-xO-8u9">
+                            <rect key="frame" x="0.0" y="28.5" width="382" height="34"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                            <textInputTraits key="textInputTraits" textContentType="password"/>
+                        </textField>
+                    </subviews>
+                    <constraints>
+                        <constraint firstItem="uZa-xO-8u9" firstAttribute="leading" secondItem="Kf8-kn-R6A" secondAttribute="leading" id="CqN-Zw-B5t"/>
+                        <constraint firstAttribute="trailing" secondItem="Kse-qC-Bhb" secondAttribute="trailing" id="e1B-Qd-bHD"/>
+                        <constraint firstAttribute="trailing" secondItem="uZa-xO-8u9" secondAttribute="trailing" id="e9w-Kt-GE8"/>
+                        <constraint firstItem="Kse-qC-Bhb" firstAttribute="leading" secondItem="Kf8-kn-R6A" secondAttribute="leading" id="eNn-VM-k2n"/>
+                    </constraints>
+                </stackView>
+                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="sG9-Uc-slQ">
+                    <rect key="frame" x="16" y="351.5" width="382" height="62.5"/>
+                    <subviews>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="confirme senha" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5Qd-h4-fRA">
+                            <rect key="frame" x="0.0" y="0.0" width="382" height="20.5"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                            <color key="textColor" systemColor="systemGray2Color" red="0.68235294120000001" green="0.68235294120000001" blue="0.69803921570000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                        <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="confirme sua senha" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="e41-pj-KvR">
+                            <rect key="frame" x="0.0" y="28.5" width="382" height="34"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                            <textInputTraits key="textInputTraits" textContentType="password"/>
+                        </textField>
+                    </subviews>
+                    <constraints>
+                        <constraint firstItem="e41-pj-KvR" firstAttribute="leading" secondItem="sG9-Uc-slQ" secondAttribute="leading" id="F85-WE-L3M"/>
+                        <constraint firstItem="5Qd-h4-fRA" firstAttribute="leading" secondItem="sG9-Uc-slQ" secondAttribute="leading" id="VNS-0Y-3Xb"/>
+                        <constraint firstAttribute="trailing" secondItem="5Qd-h4-fRA" secondAttribute="trailing" id="nAw-0a-11h"/>
+                        <constraint firstAttribute="trailing" secondItem="e41-pj-KvR" secondAttribute="trailing" id="yHa-Tj-hpj"/>
+                    </constraints>
+                </stackView>
+                <stackView opaque="NO" contentMode="scaleToFill" spacing="15" translatesAutoresizingMaskIntoConstraints="NO" id="gUu-Co-Lxm">
+                    <rect key="frame" x="16" y="434" width="382" height="31"/>
+                    <subviews>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="motorista" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4hZ-zj-V6h">
+                            <rect key="frame" x="0.0" y="0.0" width="151.5" height="31"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                            <nil key="textColor"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                        <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="wqH-Wy-NLe">
+                            <rect key="frame" x="166.5" y="0.0" width="51" height="31"/>
+                        </switch>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="passageiro" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vUo-On-M2B">
+                            <rect key="frame" x="230.5" y="0.0" width="151.5" height="31"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                            <nil key="textColor"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                    </subviews>
+                    <constraints>
+                        <constraint firstItem="vUo-On-M2B" firstAttribute="leading" secondItem="wqH-Wy-NLe" secondAttribute="trailing" constant="15" id="PXQ-37-kbr"/>
+                        <constraint firstItem="wqH-Wy-NLe" firstAttribute="centerX" secondItem="gUu-Co-Lxm" secondAttribute="centerX" id="SYK-Xn-y6e"/>
+                        <constraint firstItem="wqH-Wy-NLe" firstAttribute="leading" secondItem="4hZ-zj-V6h" secondAttribute="trailing" constant="15" id="ohr-s9-OAi"/>
+                    </constraints>
+                </stackView>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="FUX-17-uaC">
+                    <rect key="frame" x="140.5" y="485" width="133" height="53"/>
+                    <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    <constraints>
+                        <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="53" id="Kgm-eN-1t2"/>
+                        <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="133" id="zXI-1b-rau"/>
+                    </constraints>
+                    <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    <state key="normal" title="Cadastrar"/>
+                </button>
+            </subviews>
             <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+            <constraints>
+                <constraint firstItem="lad-dT-TyL" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="16" id="1X7-zP-j2Z"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="lad-dT-TyL" secondAttribute="trailing" constant="16" id="41W-KR-Sfe"/>
+                <constraint firstItem="pwZ-o5-CCz" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="16" id="46h-5F-bg5"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="Kf8-kn-R6A" secondAttribute="trailing" constant="16" id="4ha-yY-VZj"/>
+                <constraint firstItem="FUX-17-uaC" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="6VM-i2-2Pe"/>
+                <constraint firstItem="pwZ-o5-CCz" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" constant="30" id="91X-7w-M2i"/>
+                <constraint firstItem="lad-dT-TyL" firstAttribute="top" secondItem="pwZ-o5-CCz" secondAttribute="bottom" constant="30" id="ASL-0T-0HB"/>
+                <constraint firstItem="lad-dT-TyL" firstAttribute="top" secondItem="pwZ-o5-CCz" secondAttribute="bottom" constant="30" id="Gcs-y2-idZ"/>
+                <constraint firstItem="Kf8-kn-R6A" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="16" id="K9n-Vs-gQC"/>
+                <constraint firstItem="Kf8-kn-R6A" firstAttribute="top" secondItem="lad-dT-TyL" secondAttribute="bottom" constant="30" id="Kwt-bQ-Bj9"/>
+                <constraint firstItem="sG9-Uc-slQ" firstAttribute="top" secondItem="Kf8-kn-R6A" secondAttribute="bottom" constant="30" id="Mb3-1C-2Or"/>
+                <constraint firstItem="FUX-17-uaC" firstAttribute="top" secondItem="gUu-Co-Lxm" secondAttribute="bottom" constant="20" id="Nzd-zd-rBc"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="gUu-Co-Lxm" secondAttribute="trailing" constant="16" id="QXb-qP-XdS"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="sG9-Uc-slQ" secondAttribute="trailing" constant="16" id="X2u-Me-RV7"/>
+                <constraint firstItem="gUu-Co-Lxm" firstAttribute="top" secondItem="sG9-Uc-slQ" secondAttribute="bottom" constant="20" id="a2q-0z-wES"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="pwZ-o5-CCz" secondAttribute="trailing" constant="16" id="amZ-wJ-xfy"/>
+                <constraint firstItem="gUu-Co-Lxm" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="16" id="dLD-Pk-0Kh"/>
+                <constraint firstItem="sG9-Uc-slQ" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="16" id="qhS-5K-toj"/>
+            </constraints>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
+            <point key="canvasLocation" x="139" y="153"/>
         </view>
     </objects>
 </document>
