Cria Controller de Passageiros

--- a/UberClone/Views/LoginViewController.xib
+++ b/UberClone/Views/LoginViewController.xib
@@ -9,6 +9,8 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="LoginViewController" customModule="UberClone" customModuleProvider="target">
             <connections>
+                <outlet property="email" destination="JMq-V7-SjN" id="CqG-bm-uVT"/>
+                <outlet property="password" destination="1Dm-XN-8zZ" id="5cx-lQ-s77"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -70,6 +72,9 @@
                     </constraints>
                     <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <state key="normal" title="Entrar"/>
+                    <connections>
+                        <action selector="loginButton:" destination="-1" eventType="touchUpInside" id="htH-Yj-9Qw"/>
+                    </connections>
                 </button>
             </subviews>
             <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
